# NKPC_HSA_MCMC

./: .gitignore  CLAUDE.md  README.md  doc_hmc.md  memo.lyx  memo.lyx~  pyproject.toml
_scrap/: Empgap.ipynb  Gibbs.ipynb  Gibbs_FFBS_MarginalLikelihood.ipynb  Gibbs_FFBS_MarginalLikelihood_Chib.ipynb  Gibbs_compare_prior_robustness.ipynb  est_hmc.ipynb  main_hmc.ipynb
code/: HHI_ver.ipynb  all.ipynb  functions.py  main.ipynb  main.py  main_AR1.ipynb  main_AR2.ipynb  main_k_t.ipynb  main_k_tz.ipynb  main_k_z.ipynb  models.py  models_theta.py  note.md  plot_data.ipynb  reg_ces_comparison.ipynb  reg_hsa_comparison.ipynb  ss_decompN.ipynb  ss_decompN_xerror.ipynb  su.ipynb  sub.ipynb  sub.py  v2.ipynb  v2.py  without_theta.ipynb  without_theta.py
code_matlab/: exp_priors.m  func_load_data.m  func_make_result_table.m  func_nkpc_ces.asv  func_nkpc_ces.m  func_nkpc_ces_xerror.m  func_nkpc_hsa.m  func_nkpc_hsa_decomp.m  func_nkpc_hsa_decomp_xerror.m  func_nkpc_hsa_tv.m  func_nkpc_hsa_tv_xerror.m  func_nkpc_hsa_xerror.m  func_ols_ces_system.m  func_ols_hsa_system.m  func_plot_data.m  func_plot_kappa_tv.m  func_plot_posterior.m  main.m  plot_result.m  projection_n.m  sub.m  table_result.m
code_python/: HMC.ipynb  OLS.ipynb
code_stata/: plot.do
configs/: models.yaml  paths.yaml  periods.yaml  priors_baseline.yaml  priors_tight.yaml  priors_weak.yaml
data/: BN_filter_user_inputted_series_results_HHI.csv  inflation_expectations_monthly.csv  qwi_8985b4bd179a42608341b84d5cbe3334.xlsx
estimated_coef/: ces_ml_table.md  ces_sddr_hmc.md  ces_sddr_hmc_fc.md  ces_sddr_table.md  (+2 more)
(+1707 files in other folders)
